--- a/src/index.css
+++ b/src/index.css
@@ -328,19 +328,33 @@
 }
 @media (max-width: 1200px) {
 	.event-src{
-		width: 300px;
-		height: 250px;
+		width: 250px;
+		height: 200px;
 	}
 	.event-content h4{
 		align-items: start;
 		justify-content: start;
 		text-align: start;
+		font-size: 20px;
 	}
 	.event-content p{
 		margin-bottom: 20px;
+		font-size: 13px;
 	}
 	.event{
 		border-bottom: 1px solid black;
+	}
+}
+@media (max-width: 320px) {
+	.event-src{
+		width: 200px;
+		height: 150px;
+	}
+	.event-content h4{
+		font-size: 15px;
+	}
+	.event-content p{
+		font-size: 12px;
 	}
 }
 .timeline-line {
